Slight style change for What's New page, added translation of MA 78.

--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_077.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_077.md
@@ -4,6 +4,7 @@ title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 77. The Three Clans
 type: kramdown
 base: ../../../
 previous: MA_076.html
+next: MA_078.html
 ---
 
 # [The Medium Discourses](../../index.html)
