Added MA 79 translation.

--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_078.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_078.md
@@ -1,9 +1,10 @@
 ---
 layout: default
-title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 77. The Three Clansmen of Saketa'
+title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 78. Brahmā’s Invitation to the Buddha'
 type: kramdown
 base: ../../../
 previous: MA_077.html
+next: MA_079.html
 ---
 
 # [The Medium Discourses](../../index.html)
